arrumando git ignore

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.application.name=Genesis
 
-spring.config.import=optional:file:/home/ivan-vicente/Documentos/progeto-genesis/Back-End/Genesis/db-config.properties
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/marmoraria
+spring.datasource.username=root
+spring.datasource.password=iVANBG2610.
+
 
