--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=Genesis
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/marmoraria
-spring.datasource.username=root
-spring.datasource.password=iVANBG2610.
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 
 
